# stanford-decentralised-hack

./: README.md
crowdfl/: README.md  pyproject.toml
crowdfl/run/: deploy_notes.md  simulate.py
crowdfl/src/crowdfl/client/: arraysize_mod_wrap.py  volunteer_client_app.py
crowdfl/src/crowdfl/data/: medmnist_loader.py  secret_val.py
crowdfl/src/crowdfl/model/: tiny_cnn.py
crowdfl/src/crowdfl/server/: credits_ledger.py  packet_strategy.py  server_app.py
crowdfl/src/crowdfl/utils/: logging_setup.py  params_map.py
crowdfl/web/: api.py
crowdfl/web/static/: index.html  main.js  styles.css
